syntax='proto3';

package vika.grpc;

import 'socket.message.proto';


service SocketService {
  // enter into toom
  rpc WatchRoom (WatchRoomRo) returns (WatchRoomVo);
  // exit room
  rpc LeaveRoom(LeaveRoomRo) returns (BasicResult);
  // user change room request object
  rpc RoomChange(UserRoomChangeRo) returns (UserRoomChangeVo);
  // get all the active collaborators(users)
  rpc GetActiveCollaborators (WatchRoomRo) returns (GetActiveCollaboratorsVo);
}
